# Xarmlib

./: .gitattributes  .gitignore  Doxyfile  LICENSE  README.md
devices/include/: spi_io_port.hpp  spi_io_port_debouncer.hpp  spi_io_source.hpp
examples/FPIO32S-V1-blinky/: CMakeLists.txt  README.md
examples/FPIO32S-V1-debouncer/: CMakeLists.txt  README.md
examples/FPIO32S-V1-test_FPIO8SM/: CMakeLists.txt  README.md  toolchain.cmake
examples/FreeRTOSConfig/: FreeRTOSConfig.h.kv4x_kv5x  FreeRTOSConfig.h.lpc81x_lpc84x
examples/LPC800-Mini-Kit-blinky/: CMakeLists.txt  README.md  toolchain.cmake
examples/LPC800-Mini-Kit-blinky/include/: xarmlib_config.hpp
examples/LPC800-Mini-Kit-blinky/source/: LPC800-Mini-Kit-blinky.cpp
examples/LPCXpresso845-Max-blinky/: CMakeLists.txt  README.md  toolchain.cmake
examples/LPCXpresso845-Max-blinky/include/: xarmlib_config.hpp
examples/LPCXpresso845-Max-blinky/source/: LPCXpresso845-Max-blinky.cpp
examples/xarmlib_config/: xarmlib_config.hpp.kv4x  xarmlib_config.hpp.kv5x  xarmlib_config.hpp.lpc408x_7x  xarmlib_config.hpp.lpc81x  xarmlib_config.hpp.lpc84x  xarmlib_config_lpc81x.hpp  xarmlib_config_lpc84x.hpp
include/: xarmlib.hpp  xarmlib_chrono.hpp  xarmlib_config.h  xarmlib_config.h.template  xarmlib_config.hpp.template  xarmlib_config.hpp.template_lpc81x  xarmlib_config.hpp.template_lpc84x  xarmlib_gsl.hpp
include/api/: api_crc.hpp  api_debouncer.hpp  api_digital_in.hpp  api_digital_in_bus.hpp  api_digital_out.hpp  api_digital_out_bus.hpp  api_gpio_source.hpp  api_group_debounced.hpp  api_high_res_clock.hpp  api_input_debouncer.hpp  api_input_scanner.hpp  api_io_debouncer.hpp  api_output_debouncer.hpp  api_output_driver.hpp  api_pin_bus.hpp  api_pin_bus_debounced.hpp  api_pin_debouncer.hpp  api_pin_scanner.hpp  api_pin_source.hpp  api_port_in.hpp  api_push_button_bus.hpp  api_push_button_debouncer.hpp  api_spi_io_module.hpp  api_spi_io_module_debouncer.hpp
include/api_v1/: api_crc.hpp  api_digital_in.hpp  api_digital_in_bus.hpp  api_digital_out.hpp  api_digital_out_bus.hpp  api_gpio_source.hpp  api_input_debouncer.hpp  api_io_debouncer.hpp  api_output_driver.hpp  api_pin_bus.hpp  api_pin_scanner.hpp
include/core/: bitmask.hpp  chrono.hpp  delegate.hpp  mutex.hpp  non_copyable.hpp  os_support.hpp  peripheral_ref_counter.hpp  scoped_lock.hpp  target_flash.hpp  target_gpio.hpp  target_pin.hpp  target_pin_int.hpp  target_port.hpp  target_specs.hpp  target_spi.hpp  target_system.hpp  target_timer.hpp  target_usart.hpp  target_watchdog.hpp
include/cpp/: array  assert.h  chrono  dynarray  span
include/devices/: devices_spi_io_module.hpp  er_tft032_3.hpp  font.hpp  ili9341.hpp  parallel_lcd.hpp  spi_eeprom.hpp  spi_io_source.hpp  spi_nor_flash.hpp  spi_sd_card.hpp
include/hal/: hal_api.hpp  hal_can.hpp  hal_enc.hpp  hal_faim.hpp  hal_flash.hpp  hal_flash_base.hpp  hal_gpio.hpp  hal_gpio_base.hpp  hal_i2c.hpp  hal_peripheral_irq.hpp  hal_peripheral_irq_multi.hpp  hal_peripheral_ref_counter.hpp  hal_peripheral_shared_irq.hpp  hal_peripheral_shared_irq_multi.hpp  hal_pin.hpp  hal_pin_int.hpp  hal_pin_int_base.hpp  hal_pins.hpp  hal_port.hpp  hal_port_base.hpp  hal_spi.hpp  hal_spi_base.hpp  hal_system.hpp  hal_system_base.hpp  hal_timer.hpp  hal_timer16.hpp  hal_timer_base.hpp  hal_uart.hpp  hal_us_ticker.hpp  hal_us_ticker_base.hpp  hal_usart.hpp  hal_usart_base.hpp  hal_watchdog.hpp  hal_watchdog_base.hpp
include/hal_v1/: hal_faim.hpp  hal_flash.hpp  hal_gpio.hpp  hal_i2c.hpp  hal_pin.hpp  hal_pin_int.hpp  hal_system.hpp  hal_timer.hpp  hal_uart.hpp
include/system/: array  bitmask  cassert  chrono  cmsis  cmsis.h  delegate  dynarray  (+5 more)
ldscripts/: lpc4072.ld  lpc4074.ld  lpc4076.ld  lpc4078_88.ld  lpc407x_8x_common.ld  lpc408x_7x_common.ld  lpc810.ld  lpc811.ld  lpc812.ld  lpc81x_common.ld  lpc844.ld  lpc845.ld  lpc84x_common.ld
(+236 files in other folders)
